Add changes on 06.02.2024, 20:13

--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
             </div>
             <nav>
                 <ul class="menu__list">
-                    <li class="menu__link"><a href="#">Про меня</a></li>
-                    <li class="menu__link"><a href="#">Мой опыт</a></li>
-                    <li class="menu__link"><a href="#">Мои навыки</a></li>
-                    <li class="menu__link"><a href="#">Мои работы</a></li>
-                    <li class="menu__link"><a href="#">Прайс-лист</a></li>
-                    <li class="menu__link"><a href="#">Контакты</a></li>
+                    <li class="menu__link"><a href="#about_me">Про меня</a></li>
+                    <li class="menu__link"><a href="#about_expr">Мой опыт</a></li>
+                    <li class="menu__link"><a href="#skills">Мои навыки</a></li>
+                    <li class="menu__link"><a href="#projects">Мои работы</a></li>
+                    <!--<li class="menu__link"><a href="#">Прайс-лист</a></li>-->
+                    <li class="menu__link"><a href="#contacts">Контакты</a></li>
                 </ul>
             </nav>
         </div>
@@ -143,7 +143,7 @@
                                 Web-разработка
                             </div>
                             <div class="about__skills-text">
-                               Больше всего имею опыт работы на данный момент, особенно в Front-End. Так же есть знания работы с JavaScript и для необходимости JQuery 
+                               Больше всего имею опыт работы на данный момент, особенно в Front-End. Верстка сайтов, адаптирование, так-же назначение логики и функциональности 
                             </div>
                         </div>
                     </div>
@@ -170,7 +170,7 @@
                                 Создание ПО
                             </div>
                             <div class="about__skills-text">
-                                Создание ПО на С++ Qt и C# Windows Form/WPF/.NET
+                                Создание своего рода приложений(пока что только под декстоп). 
                             </div>
                         </div>
                     </div>
@@ -179,6 +179,7 @@
         </div>
     </section>
 
+    <a name="about_expr"></a>
     <section class="resume">
         <div class="container">
             <h2 class="title title_fz16 title__section-title">Опыт</h2>
@@ -202,7 +203,7 @@
                                     </div>
                                 </div>
                                 <div class="resume__item-body">
-                                    Обучение ещё не оконченно, но уже есть что показать. Тут я смог овладеть навыками создания ПО, работа с базами данных и прочее.
+                                    Обучение ещё не оконченно, но уже есть что показать. Тут я и смог овладеть навыками создания ПО, работа с базами данных и прочее.
                                 </div>
                             </div>
                         </li>
@@ -254,7 +255,7 @@
             </div>
         </div>
     </section>
-
+    <a name="skills"></a>
     <section class="skills">
         <div class="container">
             <div class="title title_fz16 title__section-title">
@@ -313,13 +314,46 @@
                 </div>
                 <div class="skills__item">
                     <div class="skills__item-icon">
-                        <img src="icons/skills/Mysql_logo.png" alt="jquery">
+                        <img src="icons/skills/Mysql_logo.png" alt="mysql">
                     </div>
                     <div class="skills__item-title title_fz14">
                         MySQL
                     </div>
                     <div class="skills__item-descr">
                        Этот язык позволяет управлять базами данных и их информацией, улучшать безопасность и т.д
+                    </div>
+                </div>
+                <div class="skills__item">
+                    <div class="skills__item-icon">
+                        <img src="icons/skills/SQLite.svg" alt="sqlite">
+                    </div>
+                    <div class="skills__item-title title_fz14">
+                        SQLite
+                    </div>
+                    <div class="skills__item-descr">
+                       То же, что и MySql, но гораздо проще при не самых емких задачах и запросах
+                    </div>
+                </div>
+                <div class="skills__item">
+                    <div class="skills__item-icon">
+                        <img src="icons/skills/github.svg" alt="github">
+                    </div>
+                    <div class="skills__item-title title_fz14">
+                        GitHub
+                    </div>
+                    <div class="skills__item-descr">
+                       Удобен во многих случаях, а чаще всего для отслеживания состояния собственных проектов и нахождение интересных идей у остальных
+                    </div>
+                </div>
+                <div class="skills__item">
+                    <div class="skills__item-icon">
+                        <img src="icons/skills/git.svg" alt="git">
+                    </div>
+                    <div class="skills__item-title title_fz14">
+                        Git
+                    </div>
+                    <div class="skills__item-descr">
+                        Не заменим с тем же GitHub-ом и прекрасно используется в простых целях
                     </div>
                 </div>
               
@@ -398,7 +432,7 @@
     </section>
 
 
-
+    <a name="projects"></a>
     <section class="portfolio">
         <div class="container">
             <div class="title title_fz16 title__section-title">
@@ -522,7 +556,7 @@
         </div>
     </section> -->
 
-
+    <a name="contacts"></a>
     <section class="contacts">
         <div class="container">
             <div class="contacts__wrapper">
@@ -542,7 +576,7 @@
                         <!-- <a href="#" class="contacts__link">
                             <img src="icons/social/facebook.svg" alt="facebook">
                         </a> -->
-                        <a href="#" class="contacts__link">
+                        <a href="https://t.me/VladosikGTest335" class="contacts__link">
                             <img src="icons/social/telegram.svg" alt="telegram">
                         </a>
                         <!-- <a href="#" class="contacts__link">
