Add changes on 08.02.2024, 12:00

--- a/index.html
+++ b/index.html
@@ -579,13 +579,16 @@
                         <a href="https://t.me/VladosikGTest335" class="contacts__link">
                             <img src="icons/social/telegram.svg" alt="telegram">
                         </a>
+                        <a href="mailto: vlad11551105@gmail.com" class="contacts__link">
+                            <img src="icons/social/gmail.svg" alt="gmail">
+                        </a>
                         <!-- <a href="#" class="contacts__link">
                             <img src="icons/social/instagram.svg" alt="instagram">
                         </a> -->
                     </div>
 
-                    <div class="title title_fz14 contacts__text">
-                        Или оставьте ваши данные и я сама вам напишу:
+                    <!-- <div class="title title_fz14 contacts__text">
+                        Или оставьте ваши данные и я сам вам напишу:
                     </div>
 
                     <form action="#" class="contacts__form">
@@ -616,7 +619,7 @@
 
                         </div>
                         
-                    </form>
+                    </form> -->
                 </div>
             </div>
         </div>
