Change link in contacts on 08.02.2024, 15:47

--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
                         <!-- <a href="#" class="contacts__link">
                             <img src="icons/social/facebook.svg" alt="facebook">
                         </a> -->
-                        <a href="https://t.me/VladosikGTest335" class="contacts__link">
+                        <a href="https://t.me/VladislavGTest335" class="contacts__link">
                             <img src="icons/social/telegram.svg" alt="telegram">
                         </a>
                         <a href="mailto: vlad11551105@gmail.com" class="contacts__link">
