Change something info about skills and education blocks on 10.02.2024, 18:24

--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@
                                         Академия ШАГ
                                     </h4>
                                     <div class="resume__item-location">
+                                        <b>Младшая академия</b>  | Харьков (2018-2021)
                                        <b>Старшая академия</b>  | Харьков (2021-2024)
                                     </div>
                                 </div>
@@ -332,6 +333,28 @@
                     </div>
                     <div class="skills__item-descr">
                        То же, что и MySql, но гораздо проще при не самых емких задачах и запросах
+                    </div>
+                </div>
+                <div class="skills__item">
+                    <div class="skills__item-icon">
+                        <img src="icons/skills/c++.svg" alt="c++">
+                    </div>
+                    <div class="skills__item-title title_fz14">
+                        С++
+                    </div>
+                    <div class="skills__item-descr">
+                       Является одним из ключевых языков программирования для более комплексных и гибких проектов. Не исключено, что его по сей день используют для своих целей
+                    </div>
+                </div>
+                <div class="skills__item">
+                    <div class="skills__item-icon">
+                        <img src="icons/skills/c-sharp.svg" alt="c-sharp">
+                    </div>
+                    <div class="skills__item-title title_fz14">
+                        C#
+                    </div>
+                    <div class="skills__item-descr">
+                       В правильной среде разработки дает массу возможностей за счет множества библиотек, а так-же С-подобным синтаксисом   
                     </div>
                 </div>
                 <div class="skills__item">
