Change email link on 11.02.2024

--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@
                         <a href="https://t.me/VladislavGTest335" class="contacts__link">
                             <img src="icons/social/telegram.svg" alt="telegram">
                         </a>
-                        <a href="mailto: vlad11551105@gmail.com" class="contacts__link">
+                        <a href="mailto: vladislavfordev@gmail.com" class="contacts__link">
                             <img src="icons/social/gmail.svg" alt="gmail">
                         </a>
                         <!-- <a href="#" class="contacts__link">
