--- a/index.html
+++ b/index.html
@@ -496,7 +496,6 @@
         </div>
     </section>
 
-    <!-- <section class="price">
         <div class="container">
             <div class="title title_fz16 title__section-title">
                 Прайс-лист
@@ -599,7 +598,7 @@
                         <!-- <a href="#" class="contacts__link">
                             <img src="icons/social/facebook.svg" alt="facebook">
                         </a> -->
-                        <a href="https://t.me/VladislavGTest335" class="contacts__link">
+                        <a href="https://t.me/GrishkoVladislav" class="contacts__link">
                             <img src="icons/social/telegram.svg" alt="telegram">
                         </a>
                         <a href="mailto: vladislavfordev@gmail.com" class="contacts__link">
